2A/05_Projet_GL/src/test/deca/context/valid/index/02_decl_class_field.deca


// attendu : NF = 2 , NM = 1


// class A {
//     int x ; 
//     int y ; 

// }

class A {
    void m() { }
    void p() { }
}

class B extends A {
    void p() { }
    void q() { }
}